[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pdb-branch"
version = "0.1.0"
description = "Oracle PDB snapshot-copy branching for agentic workflow experiments"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "pdb-branch contributors" }
]
keywords = ["oracle", "pdb", "pluggable-database", "branching", "agents"]
dependencies = [
  "oracledb>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[tool.hatch.build.targets.wheel]
packages = ["src/pdb_branch"]

[tool.hatch.build.targets.wheel.force-include]
"../../sql/001_tables.sql" = "pdb_branch/sql/001_tables.sql"
"../../sql/002_package.sql" = "pdb_branch/sql/002_package.sql"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that require a live Oracle Database CDB",
]
