[package]
name = "pdb-branch"
version = "0.1.0"
edition = "2021"
description = "Rust binding for Oracle PDB branch management"
license = "Apache-2.0"

[features]
default = ["oracle-rs"]
oracle-rs = []
rust-oracle = []

[dependencies]
async-trait = "0.1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
