[package]
name = "pdb-branch"
version = "0.1.0"
edition = "2021"
description = "Rust binding for Oracle PDB branch management"
license = "Apache-2.0"

[features]
default = ["oracle-rs"]
oracle-rs = ["dep:oracle_rs"]
rust-oracle = ["dep:oracle"]

[dependencies]
async-trait = "0.1"
oracle = { version = "0.6.3", optional = true }
oracle_rs = { package = "oracle-rs", version = "0.1.7", optional = true }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
